syntax = "proto3";
package dymensionxyz.dymension.sequencer;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dymension/sequencer/params.proto";
import "dymension/sequencer/sequencer.proto";
// this line is used by starport scaffolding # 1
import "dymension/sequencer/operating_status.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/sequencer/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dymensionxyz/dymension/sequencer/params";
  }
  // Queries a Sequencer by address.
	rpc Sequencer(QueryGetSequencerRequest) returns (QueryGetSequencerResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/sequencer/sequencer/{sequencerAddress}";
	}

	// Queries a list of Sequencer items.
	rpc Sequencers(QuerySequencersRequest) returns (QuerySequencersResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/sequencer/sequencer";
	}

	// Queries a SequencersByRollapp by rollappId.
	rpc SequencersByRollapp(QueryGetSequencersByRollappRequest) returns (QueryGetSequencersByRollappResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/sequencer/sequencers_by_rollapp/{rollappId}";
	}

	// Queries a SequencersByRollappByStatus
	rpc SequencersByRollappByStatus(QueryGetSequencersByRollappByStatusRequest) returns (QueryGetSequencersByRollappByStatusResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/sequencer/sequencers_by_rollapp/{rollappId}/{status}";
	}



// this line is used by starport scaffolding # 2
}
  
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetSequencerRequest {
	string sequencerAddress = 1;
}

message QueryGetSequencerResponse {
	Sequencer sequencer = 1 [(gogoproto.nullable) = false];
}

message QuerySequencersRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QuerySequencersResponse {
	repeated Sequencer sequencers = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetSequencersByRollappRequest {
	  string rollappId = 1;
}

message QueryGetSequencersByRollappResponse {
	repeated Sequencer sequencers = 1 [(gogoproto.nullable) = false];
}

message QueryGetSequencersByRollappByStatusRequest {
	string rollappId = 1;
	OperatingStatus status = 2;
}

message QueryGetSequencersByRollappByStatusResponse {
  repeated Sequencer sequencers = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
